2019-03-21  Araki Ken  <arakiken@users.sf.net>

	* sdl2/ui_display.c: Compiling error is fixed.

	* main-con.c, console/ui_display.c:
	  Whether IMAXBEL is defined or not is checked.

	* */Makefile.in: -lX11 is removed.

	* configure.in:
	  - "-lX11" is set to X_LIBS if X is found.
	  - utmp is checked and INSTALL_OPT is set after executing ./configure
	    at subdirs.

	* c_sixel.c:
	  Segfault in handling errors in load_sixel_from_data() is fixed.

2019-03-20  Araki Ken  <arakiken@users.sf.net>

	* ui_window.c: expose() exposes all screen even if
	  win->update_window_flag is 0 and force_expose is 1.

	* beos.cpp, beos.h:
	  - force_expose is added to arguments of draw_screen().
	  - force_expose is added to arguments of view_update().

	* configure.in: "gui" => "$gui"

2019-03-19  Araki Ken  <arakiken@users.sf.net>

	* ui_simple_sb_view.c: Drawing down side shade is fixed.

	* bl_unistd.c: __bl_setenv() considers 'overwrite' argument.

2019-03-18  Araki Ken  <arakiken@users.sf.net>

	* java/Makefile.in: Updated to Java 10 or later.

	* mlterm.c: Compiling error is fixed.

2019-03-17  Araki Ken  <arakiken@users.sf.net>

	* vt_pty_ssh.c: If libssh2_userauth_list() returns NULL but no error
	  happens, authentication is skipped.

	* README.ja: Updated.

	* im_iiimf_aux.c: Compiling error is fixed.

	* bl_util.[ch]: bl_base64_encode() is removed.

2019-03-17  Araki Ken  <arakiken@users.sf.net>

	* beos.cpp: Conflicting Control+a with B_HOME etc is fixed.

	* ui.h: 0xe0000 mask is set for XK_Home etc.

	* vt_util.[ch]: Removed.

	* bl_util.c:
	  - Added.
	  - bl_hex_decode(), bl_hex_encode() and bl_base64_decode() are moved
	    from vt_util.[ch].
	  - bl_hls_to_rgb() is moved from c_sixel.c.
	  ^ bl_rgb_to_hls() is moved from vt_parser.c (rgb_to_hls()).
	  - bl_get_user_name() is added.

	* bl_config.h.in: '#undef HAVE_GETPWUID' is added.

	* src/Makefile.in: bl_util.o is added to COMOBJ.

	* baselib/configure.in: The existence of getpwuid is checked.
